pxc/tests/test_093_text/tbl_bugfix1.px
public namespace tbl_bugfix1;
import core::common -;
import core::io::text -;

pure mtvaluetype struct ent {
  string key;
  int x;
  int y;
}

{
  const f = thread_io().open("hoge.text").value;
  f.read_records{record_cb, 0}(); // error: es is not defined yet
  varray{ent} es;
  pure function bool record_cb(ent const& e) {
    es.push_back(e);
    return true;
  }
  println(es);
}

